--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -61,7 +61,8 @@
       height: 100%;
       width: 200%;
       content: "";
-      background-image: linear-gradient(to right, #46005b, #c609ff 80%);
+      background: #c609ff;
+      // background-image: linear-gradient(to right, #46005b, #c609ff 80%);
       z-index: 1;
       @include transition;
     }
